k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: lv-ms2-api-service
            port:
              number: 8000

      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: lv-ms2-frontend-service
            port:
              number: 80
